examples/test/testpolicy19255.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19255
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key21: value29
      key14: value49
      key19: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value35
          key41: value19
          key32: value4
      podSelector:
        matchLabels:
          key28: value18
